log
Fri, Mar 21, 2025 10:33:40 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 10:40:51 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
6798b04
Fri, Mar 21, 2025 10:46:32 PM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
9233018
Fri, Mar 21, 2025 11:00:49 PM: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
exercises.c:95:1: error: expected identifier or '(' before '}' token
 }
 ^
Compilation failed
ff2c488
Fri, Mar 21, 2025 11:11:50 PM: 
 exercises.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:86:17: error: expected expression before '==' token
       if (dato* == elem) {
                 ^~
Compilation failed
bbb580a
Fri, Mar 21, 2025 11:16:36 PM: 
 exercises.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  3|2
total_score: 40/70
6f387b5
